cached transformed shapes and bounding boxes, and optimized collision code

--- a/Testing/imgui.ini
+++ b/Testing/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Test]
-Pos=891,244
-Size=918,512
+Pos=862,364
+Size=456,474
 Collapsed=0
 
 [Window][Camera Controls]
@@ -34,8 +34,8 @@ Size=353,894
 Collapsed=0
 
 [Window][Debug Menu]
-Pos=464,51
-Size=487,351
+Pos=713,-12
+Size=488,353
 Collapsed=0
 
 [Window][Example: Console]
