--- a/Testing/imgui.ini
+++ b/Testing/imgui.ini
@@ -1,10 +1,10 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=118,57
 Size=400,400
 Collapsed=0
 
 [Window][Test]
-Pos=226,552
+Pos=608,295
 Size=852,441
 Collapsed=0
 
@@ -34,7 +34,7 @@ Size=353,894
 Collapsed=0
 
 [Window][Debug Menu]
-Pos=605,13
+Pos=595,-38
 Size=488,354
 Collapsed=0
 
