--- a/Testing/imgui.ini
+++ b/Testing/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Test]
-Pos=564,508
+Pos=641,-134
 Size=621,440
 Collapsed=0
 
@@ -34,7 +34,7 @@ Size=353,894
 Collapsed=0
 
 [Window][Debug Menu]
-Pos=648,387
+Pos=496,464
 Size=488,354
 Collapsed=0
 
